--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 840625642319511632
 textchannel = 840625610619355180
 ladderchannel = 
 jungsanchannel = 
