--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -2,20 +2,20 @@
 bossname = 고래
 bosstime = 19:50
 genPeriod = 168:00
-startDate = 2021-04-22
+startDate = 2021-05-13
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 선착장으로 오세요
 
 bossname = 고래
 bosstime = 19:50
 genPeriod = 168:00
-startDate = 2021-04-23
+startDate = 2021-05-14
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 선착장으로 오세요
 
 bossname = 고래
 bosstime = 19:50
 genPeriod = 168:00
-startDate = 2021-04-24
+startDate = 2021-05-15
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 선착장으로 오세요
+alert_ment = 탐 입니다. 선착장으로 오세
