--- a/boss.ini
+++ b/boss.ini
@@ -1,72 +1,191 @@
 ﻿----- 일반보스 -----
-bossname = 선녀
+bossname = 졸업30
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 졸업60
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 졸업180
 gentime = 03:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 진의방
+gentime = 03:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭진의방
+gentime = 03:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 무사
+gentime = 03:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭무사
+gentime = 03:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 선녀1
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 선녀9
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭선녀1
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 선녀9
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+ 
+bossname = 닌탑
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭닌탑
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 문려
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭문려
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 백향
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 백향
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 선녀
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 폭선녀
-gentime = 03:00
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 동장군
-gentime = 03:00
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 동잔군의 방으로 오세요
+alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 폭동장군
-gentime = 03:00
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 폭동장군의 방으로 오세요
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 서장군
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭서장군
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 남장군
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 폭남장군
+gentime = 00:30
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 늑대
-gentime = 03:00
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 늑대인간의 굴10로 오세요
+alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 폭늑대
-gentime = 03:00
+gentime = 00:30
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 폭늑대인간의 굴10로 오세요
-mungtime = 1
-
-bossname = 문려
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 문려의 방14로 오세요
-mungtime = 1
-
-bossname = 폭문려
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 폭문려의 방14으로 오세요
-mungtime = 1
-
-bossname = 백향
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 백향의 방16으로 오세요
-mungtime = 1
-
-bossname = 폭백향
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 폭백향의 방16으로 오세요
+alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 폭동3
@@ -181,78 +300,99 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
+bossname = 7층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 8층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 9층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 17층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 18층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 19층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 20층
+gentime = 01:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
 bossname = 27층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 28층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 29층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 30층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 38층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 39층
-gentime = 03:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 40층
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다.
-mungtime = 1
-
-bossname = 흑룡
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다.
-mungtime = 1
-
-bossname = 진룡
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다.
-mungtime = 1
-
-bossname = 감룡
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐 입니다.
-mungtime = 1
-
-bossname = 묵룡
-gentime = 08:00
+gentime = 01:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
@@ -291,4 +431,11 @@ gentime = 06:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 왕의 시련 8층으로 오세요
+mungtime = 1
+
+bossname = 베이글
+gentime = 00:05
+nogencheck = 1
+before_alert_ment = 토끼 척살 시간입니다
+alert_ment = 베이글젠 입니다.
 mungtime = 1
